--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,25 @@
-
 /* Your CSS Code here. */
+.holder{
+	display: flex;
+	align-content: center;
+	justify-content: center;
+	width: 100vw;
+	height: 100vh;
+	align-items: center;
+	flex-wrap: wrap;
+}
+.item{
+	height: 70px;
+	width: 70px;
+}
+.green{
+	background-color: green;
+}
+.red{
+	background-color: red;
+	order:2;
+}
+.blue{
+	background-color: blue;
+	order: 3;
+}
